@@ -13,14 +13,14 @@
         "_comment": "Change Apollo appearance event",
         "type": "SET_KEY",
         "index": "condition",
-        "content": "!party.has.Apollo"
+        "content": "!party.has.Apollo && party.has.Emilie"
     },
     { "type": "EXIT", "count": 1 },
     { "type": "ENTER", "index": 1 },
     {
         "type": "SET_KEY",
         "index": "condition",
-        "content": "party.has.Apollo || plot.apolloFight > 16000"
+        "content": "party.has.Apollo || plot.apolloFight >= 3100"
     },
     { "type": "EXIT", "count": 1 },
     {
@@ -41,12 +41,20 @@
         "_comment": "Dont meet Apollo out of time",
         "type": "SET_KEY",
         "index": "endCondition",
-        "content": "plot.apolloFight < 16000"
+        "content": "plot.apolloFight >= 3100"
     },
     {
-        "type": "EXIT",
-        "count": 2
+        "type": "ENTER",
+        "index": ["event"]
     },
+    {
+        "_comment": "Dont meet Apollo out of time",
+        "type": "SET_KEY",
+        "index": 83,
+        "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.apolloFight", "value": 3100 }
+    },
+    { "type": "EXIT", "count": 1 },
+    { "type": "EXIT", "count": 2 },
 
     {
         "type": "EXIT",
